--- a/AllFolderForFilmDex1.0/Filmdex/bin/Filmdex.dll.config
+++ b/AllFolderForFilmDex1.0/Filmdex/bin/Filmdex.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name="FilmdexContext" connectionString="Data Source=DESKTOP-92GCUIJ\SQLEXPRESS; Initial Catalog=FilmdexDb; Integrated Security=true"
+		<add name="FilmdexContext" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=FilmdexDb; Integrated Security=true"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
