--- a/AllFolderForFilmDex1.0/Business/Business.csproj
+++ b/AllFolderForFilmDex1.0/Business/Business.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\Filmdex\packages\NUnit.3.13.3\build\NUnit.props" Condition="Exists('..\Filmdex\packages\NUnit.3.13.3\build\NUnit.props')" />
   <Import Project="..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -40,6 +41,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\Filmdex\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework, Version=3.13.3.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\Filmdex\packages\NUnit.3.13.3\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -71,6 +75,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
     <Error Condition="!Exists('..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+    <Error Condition="!Exists('..\Filmdex\packages\NUnit.3.13.3\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\Filmdex\packages\NUnit.3.13.3\build\NUnit.props'))" />
   </Target>
   <Import Project="..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\Filmdex\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
 </Project>
